Test mode, change main chan message format

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-export JOIN_LINK=https://t.me/joinchat/SOMETHING
+#export JOIN_LINK=https://t.me/joinchat/SOMETHING
 export TELEGRAM_TOKEN=123:abcdefghijkfakefakefakefake
 export APIKEY=examplereplacemeexamplereplaceme
+#export TEST_MODE=1
