require py3.9+, tidy flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-python_requires = >=3.6, <4
+python_requires = >=3.9, <4
 packages = find:
 
 [flake8]
@@ -22,4 +22,11 @@ application-import-names = main, furcastpornbot
 import-order-style = google
 exclude =
     venv/*
-accept-encodings = utf-8
+no-accept-encodings = True
+ignore =
+    # "line break before binary operator" - black conflict
+    W503,
+    # Unnecessary on py3.9+
+    FI10,FI11,FI12,FI13,FI14,FI15,FI16,FI17,
+    # Needed until py3.11
+    FI58,
